[package]
name = "record-syncd"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.24.4"
ctrlc = "3.4"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
socket2 = "0.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
libc = "0.2"
